--- a/src/main/java/net/indyjug/HomePage.html
+++ b/src/main/java/net/indyjug/HomePage.html
@@ -6,5 +6,7 @@
         <strong>Wicket Quickstart Archetype Homepage</strong>
         <br/><br/>
         <span wicket:id="message">message will be here</span>
+        <br/><br/>
+        <a wicket:id="linkHome" href="#">Go Home</a>
     </body>
 </html>
