add a link to the form page
What an horrible URL though...
http://localhost:8080/wicket-intro/?wicket:bookmarkablePage=:net.indyjug.SimpleFormPage

--- a/src/main/java/net/indyjug/HomePage.html
+++ b/src/main/java/net/indyjug/HomePage.html
@@ -8,5 +8,7 @@
         <span wicket:id="message">message will be here</span>
         <br/><br/>
         <a wicket:id="linkHome" href="#">Go Home</a>
+        <br/><br/>
+        <a wicket:id="linkToForm" href="#">Let's see a form</a>
     </body>
 </html>
