add a form to the simple form page

--- a/src/main/java/net/indyjug/SimpleFormPage.html
+++ b/src/main/java/net/indyjug/SimpleFormPage.html
@@ -4,5 +4,9 @@
     </head>
     <body>
       <h1>Demo Form</h1>
+      <form wicket:id="myForm">
+        Type something here: <input wicket:id="something" type="text"/>
+        <input type="submit" value="Submit"/>
+      </form>
     </body>
 </html>
