add a label to echo the user's input

--- a/src/main/java/net/indyjug/SimpleFormPage.html
+++ b/src/main/java/net/indyjug/SimpleFormPage.html
@@ -8,5 +8,7 @@
         Type something here: <input wicket:id="something" type="text"/>
         <input type="submit" value="Submit"/>
       </form>
+      You said:
+      <span wicket:id="said">[whatever the user typed last]</span>
     </body>
 </html>
