add AJAX-enabled text field

--- a/src/main/java/net/indyjug/SimpleFormPage.html
+++ b/src/main/java/net/indyjug/SimpleFormPage.html
@@ -7,6 +7,8 @@
       <form wicket:id="myForm">
         Type something here: <input wicket:id="something" type="text"/>
         <input type="submit" value="Submit"/>
+        <br/>
+        or via AJAX: <input wicket:id="ajaxTextField" type="text"/>
       </form>
       You said:
       <span wicket:id="said">[whatever the user typed last]</span>
